<resources>
    <string name="app_name">en2zny</string>
    <string name="logo_name">E N 2 Z N Y</string>
    <string name="under_logo_name">PARTNER</string>
    <string name="rider_app_txt">LOOKING FOR THE RIDER APP ?</string>
    <string name="signin_btn">SIGN IN </string>
    <string name="register_btn">REGISTER </string>
    <string name="Email">Email </string>
    <string name="password">Password  </string>
    <string name="name">Name  </string>
    <string name="phone">Phone  </string>


</resources>
