<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="36sp"
            android:textAlignment="center"
           android:textColor="@color/white"
            android:text="@string/logo_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/under_logo_name"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_rider_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/rider_app_txt"
        android:textColor="@color/bottomText"


        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="16dp"
        android:layout_above="@+id/txt_rider_app"
        >
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:textColor="@color/white"
            android:text="@string/signin_btn"
            android:background="@drawable/btn_sign_in_background"
            />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="@color/btnRegister"
            android:text="@string/register_btn"
            android:background="@drawable/btn_register_background"
            />
    </LinearLayout>



</RelativeLayout>